# OptimizationLib

./: .gitignore  Bicection.h  CMakeLists.txt  CMakeSettings.json  Header1.h  OptimizationLib.cpp  OptimizationLib.h  OptimizerInterface.h  OverallOptimizer.h  README.md  Simplex.h  main.cpp  stdafx.h  testFunction.h
OptLib/AuxMethods/: Simplex.h
OptLib/Functions/: FuncParamInterface.h  Function.h  FunctionInterface.h  FunctionParam.h  Improvedfunctions.h
OptLib/Optimizers/: Dichotomy.h  Grid.h  OptimizerInterface.h  OverallOptimizer.h
OptLib/Optimizers/NDim/: NelderMead.h  Newton.h
OptLib/Optimizers/OneDim/: Bicection.h  Bisection.h  Dichotomy.h  GoldenSection.h  Grid.h
OptLib/RegressionLib/: Regression.h  RegressionInterface.h
OptLib/States/: ImprovedState.h  State.h  StateInterface.h
OptLib/TestMethods/: Grid.h  testFunction.h  testOptimizer.h  testRegression.h  testSimplex.h  testState.h
